force-app/main/default/objects/Service_Appointment_History__c/Service_Appointment_History__c.object-meta.xml
<CustomObject>
    <label>Service Appointment History</label>
    <nameField>
        <displayFormat>SAH-{00000000}</displayFormat>
        <label>Service Appointment History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Appointment History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>