force-app/main/default/objects/Service_Appointment_History__c/fields/Parts_Installed__c.field-meta.xml
<CustomField>
    <fullName>Parts_Installed__c</fullName>
    <label>Parts Installed</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>