force-app/main/default/objects/Service_Appointment_History__c/fields/Prior_Tech__c.field-meta.xml
<CustomField>
    <fullName>Prior_Tech__c</fullName>
    <label>Prior Tech</label>
    <length>64</length>
    <type>Text</type>
</CustomField>