force-app/main/default/objects/Service_Appointment_History__c/fields/Service_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Job_ID__c</fullName>
    <externalId>true</externalId>
    <label>Service Job ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>