force-app/main/default/objects/Service_Appointment_History__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <label>Work Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>